# Raytracer

./: .gitignore  AppSettings.cpp  AppSettings.h  CMakeLists.txt  CreateStats.py  LoadResourceFiles.cmake  README.md  Raytracer.cpp  Raytracer.h  Scenes.h  main.cpp
GLviewer/: GLViewer.cpp  GLViewer.h  RenderStatistics.cpp  RenderStatistics.h  Utils.h
common/: Camera.cpp  Camera.h  ColorBuffer.h  Intersection.h  MathUtils.h  Pdf.h  Random.h  Ray.h  ScatterInfo.h
lib/OBJ-Loader/examples/1 - LoadAndPrint/: e1_loadandprint.cpp
materials/: BSSRDF.h  Dielectric.h  Lambertian.h  Material.h  Metal.h
resources/: Room.mtl  bunny_scene.mtl  cubeSceneDebug.mtl  dyno.mtl  romm_materialList.txt  romm_objectList.txt  romm_objectList.tzt  untitled.mtl  untitled2.mtl
resources/blendfiles/: cubeSceneDebug.blend  untitled.blend
scene/: AABB.cpp  AABB.h  AccelerationDS.h  SceneMgr.cpp  SceneMgr.h  SceneObject.cpp  SceneObject.h
scene/accelerationDS/: AABBBVH.cpp  AABBBVH.h  AABBSimpleADS.cpp  AABBSimpleADS.h  LinearADS.cpp  LinearADS.h  OctreeADS.cpp  OctreeADS.h
scene/objects/: ObjLoader.h  Plane.cpp  Plane.h  Polygon.cpp  Polygon.h  Sphere.cpp  Sphere.h
